2008-04-01  Daiki Ueno  <ueno@unixuser.org>

	* epa.el (epa-decrypt-region): Explain the reason why this
	function should not be used in Lisp programs.
	(epa-decrypt-armor-in-region): Ditto.
	(epa-verify-region): Ditto.
	(epa-verify-cleartext-in-region): Ditto.
	(epa-sign-region): Ditto.
	(epa-encrypt-region): Ditto.

	* epg.el (epg-start-receive-keys): Fix typo in docstring.

	* epa.el (epa-select-keys): Show menu even if there is no key in
	GnuPG's keyring.

2008-04-01  Glenn Morris  <rgm@gnu.org>

	* calendar/calendar.el (calendar-make-temp-face): New function.
	(mark-visible-calendar-date):
	* calendar/diary-lib.el (fancy-diary-display): Use it.

	* vc-hooks.el (vc-responsible-backend): Declare as function.

	* calendar/calendar.el (calendar-nongregorian-visible-p): New function.
	* calendar/cal-hebrew.el (calendar-hebrew-date-is-visible-p):
	* calendar/cal-julian.el (holiday-julian): Use it.

	* calendar/cal-hebrew.el (hebrew-calendar-elapsed-days): Doc fix.
	(calendar-hebrew-date-is-visible-p): Extract some common code into
	separate function.
	(holiday-hebrew, mark-hebrew-calendar-date-pattern): Use it.

	* calendar/cal-menu.el (cal-menu-holidays-menu):
	* calendar/calendar.el (calendar-mode-map): Use calendar-mark-holidays
	rather than obsolete alias.

	* calendar/calendar.el (mark-visible-calendar-date): Also use overlay
	for mark characters.
	(calendar-unmark): Unmark by removing all overlays, rather than
	redrawing.
	(calendar-starred-day): Remove.
	(calendar-mode): Disable undo.  Don't make calendar-starred-day local.
	(calendar-cursor-to-date): No need for special star handling now
	using overlays.
	(calendar-star-date): Use overlays.

	* calendar/cal-french.el (calendar-goto-french-date):
	* calendar/cal-hebrew.el (calendar-hebrew-from-absolute)
	(holiday-hanukkah, mark-hebrew-calendar-date-pattern):
	* calendar/cal-move.el (calendar-forward-month, calendar-end-of-month):
	* calendar/cal-persia.el (calendar-persian-date-string):